--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</blockquote>
-                        <div class="jeremy-image"><img src="/image/jeremi-icon.png" alt="Джереми"></div>
+                        <div class="jeremy-image"><img src="image/jeremi-icon.png" alt="Джереми"></div>
                         <div class="card-testimonials-fotter">
                             <h3>Jeremy H.</h3>
                             <p class="testimonials-manager"> Manager</p>
@@ -186,7 +186,7 @@
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</blockquote>
-                        <div class="jeremy-image"><img src="/image/jeremi-icon.png" alt="Джереми"></div>
+                        <div class="jeremy-image"><img src="image/jeremi-icon.png" alt="Джереми"></div>
                         <div class="card-testimonials-fotter">
                             <h3>Jeremy H.</h3>
                             <p class="testimonials-manager"> Manager</p>
@@ -198,7 +198,7 @@
                             accusamus expedita repellat similique 
                             odio aspernatur ex, architecto eaque 
                             quo suscipit.</blockquote>
-                        <div class="jeremy-image"><img src="/image/jeremi-icon.png" alt="Джереми"></div>
+                        <div class="jeremy-image"><img src="image/jeremi-icon.png" alt="Джереми"></div>
                         <div class="card-testimonials-fotter">
                             <h3>Jeremy H.</h3>
                             <p class="testimonials-manager"> Manager</p>
