--- a/index.html
+++ b/index.html
@@ -12,58 +12,60 @@
         <div class="navigation">
             <h3 class="logo">Ax<span>it</span></h3>
                 <nav class="nav">
-                    <a href="#features">features</a>
-                    <a href="#about">about</a>
-                    <a href="#price">pricing</a>
-                    <a href="#revievs">revieves</a>
-                    <a href="#contacts">contacts</a>
+                    <ul>
+                        <a href="#features">Features</a>
+                        <a href="#about">About</a>
+                        <a href="#price">Pricing</a>
+                        <a href="#revievs">Revieves</a>
+                        <a href="#contacts">Contacts</a>
+                    </ul>
                 </nav>
-        </div>
+        </div><!-- navigation --> 
     
         <header class="header">
         <div class="background-mask">
-            <div class="left-section-header">
-                <h1 class="header-title">Ax<span>it</span></h1>
-                <h2 class="header-subtitle">modern axure template for beautiful prototype</h2>
-                <hr class="header-line">
-                <p class="header-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</p>
-                <button class="button">Download</button>
-            </div>
-
-            <div class="right-section-header">
-                <div class="form__fields">
-                    <p>Try your <span>free</span> trial today</p>
-                    <form>    
-                        <div class="username">
-                            <label>
-                                <input type="text" placeholder="Name">
-                            </label>
-                        </div>
-                        <div class="email-adress">
-                            <label>
-                                <input type="email" placeholder="Email">
-                            </label>
-                        </div>
-                        <div class="password">
-                            <label>
-                                <input type="password" placeholder="Password">
-                            </label>
-                        </div>
-                        <button class="form__signin-button">Get started</button>
-                    </form>  
+                <div class="left-section-header">
+                    <h1 class="header-title">Ax<span>it</span></h1>
+                    <h2 class="header-subtitle">Modern axure template for beautiful prototype</h2>
+                    <hr class="header-line">
+                    <p class="header-text">lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean</p>
+                    <button class="button">Download</button>
                 </div>
-            </div>    
-        </div>
-        </header>
+
+                <div class="right-section-header">
+                    <div class="form--fields">
+                        <p>Try your <span>free</span> trial today</p>
+                        <form>    
+                            <div class="username">
+                                <label>
+                                    <input type="text" placeholder="Name">
+                                </label>
+                            </div>
+                            <div class="email-adress">
+                                <label>
+                                    <input type="email" placeholder="Email">
+                                </label>
+                            </div>
+                            <div class="password">
+                                <label>
+                                    <input type="password" placeholder="Password">
+                                </label>
+                            </div>
+                            <button class="form--signin-button">Get started</button>
+                        </form>  
+                    </div>
+                </div>    
+            </div>
+        </header><!-- header -->
         <main>
             <section class="social-icons">
                 <div>
-                    <h3 class="title_social-icons"> Social media</h3>
-                    <p class="text_social-icons">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    <h3 class="title-social-icons"> Social media</h3>
+                    <p class="text-social-icons">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Aenean euismod bibendum laoreet.</p>
                 </div>
-                <div class="social-icons_background"></div>
-            </section>
+                <div class="social-icons-background"></div>
+            </section><!-- social icons -->
 
             <section class="features" id="features">
                 <div class="tab">
@@ -82,7 +84,7 @@
                     <button class="button">Download</button>
                 </div>
                 <div class="features-image"></div>
-            </section>
+            </section><!-- features -->
 
             <section class="our-procces">
                 <div class="heading">
@@ -110,11 +112,11 @@
                             elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                     </div>
                 </div>
-            </section>
+                </section> <!-- our process -->
 
             <section class="pricing" id="price">
                 <div class="heading">
-                    <h2 class="name-default">pricing options</h2>
+                    <h2 class="name-default">Pricing options</h2>
                     <hr class="line-default">
                     <p class="subtitle-default">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -159,11 +161,11 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section><!-- pricing -->
 
             <section class="testimonials">
                 <div class="heading">
-                    <h2 class="name-default">what our customers are saying</h2>
+                    <h2 class="name-default">What our customers are saying</h2>
                     <hr class="line-default">
                     <p class="subtitle-default">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -205,7 +207,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section><!-- testimonials -->
 
             <section class="noname-section">
                 <div class="noname-section-bulgarian">
@@ -216,9 +218,9 @@
                 </div>
             </section>
 
-            <section class="contact_us" id="contacts">
+            <section class="contact-us" id="contacts">
                 <div class="heading">
-                    <h2 class="name-default">Conact us</h2>
+                    <h2 class="name-default">Contact us</h2>
                     <hr class="line-default">
                     <p class="subtitle-default">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -243,26 +245,26 @@
                         </div>
                         <div class="text-area">
                             <label>
-                                <textarea cols="30" rows="10" placeholder="massage"></textarea>
+                                <textarea cols="30" rows="10" placeholder="message"></textarea>
                             </label>
                         </div>
-                        <button class="form-button form__signin-button">Send Massage</button>
+                        <button class="form-button form--signin-button">Send Message</button>
                     </form> 
                 </div>
-            </section>
+            </section><!-- noname-section -->
         </main>
         <footer class="footer">
-            <nav>
-                <a href="https://www.facebook.com/" target="blunk"><img class="image-footer" src="image/facebook-icon.png" alt="фейсбук"></a>
-                <a href="https://twitter.com/?lang=ru" target="blunk"><img class="image-footer" src="image/twitter-icon.png" alt="твиттер"></a>
-                <a href="https://twitter.com/?lang=ru" target="blunk"><img class="image-footer" src="image/google-plus-icon.png" alt="гугл"></a>
-                <a href="https://www.pinterest.com/" target="blunk"><img class="image-footer" src="image/pinterest-icon.png" alt="пинтерест"></a>
-                <a href="https://www.instagram.com/?hl=ru" target="blunk"><img class="image-footer" src="image/instagram-icon.png" alt="инстаграм"></a>
-                <a href="https://community.mix.com/extension-install" target="blunk"><img class="image-footer stumbleupon" src="image/stumbleupon-icon.png" alt="стамбл"></a>                
-                <a href="https://ru.wikipedia.org/wiki/RSS" target="blunk"><img class="image-footer" src="image/rss-icon.png" alt="РСС"></a>
-            </nav> 
+            <ul>
+                <li><a href="https://www.facebook.com/" target="blunk"><img class="image-footer" src="image/facebook-icon.png" alt="фейсбук"></a></li>
+                <li><a href="https://twitter.com/?lang=ru" target="blunk"><img class="image-footer" src="image/twitter-icon.png" alt="твиттер"></a></li>
+                <li> <a href="https://twitter.com/?lang=ru" target="blunk"><img class="image-footer" src="image/google-plus-icon.png" alt="гугл"></a></li>
+                <li> <a href="https://www.pinterest.com/" target="blunk"><img class="image-footer" src="image/pinterest-icon.png" alt="пинтерест"></a></li>
+                <li> <a href="https://www.instagram.com/?hl=ru" target="blunk"><img class="image-footer" src="image/instagram-icon.png" alt="инстаграм"></a></li>
+                <li> <a href="https://community.mix.com/extension-install" target="blunk"><img class="image-footer stumbleupon" src="image/stumbleupon-icon.png" alt="стамбл"></a> </li>               
+                <li> <a href="https://ru.wikipedia.org/wiki/RSS" target="blunk"><img class="image-footer" src="image/rss-icon.png" alt="РСС"></a></li>
+            </ul>
             <p class="unicode"> &#169; 2015 Axure Themes</p>
-        </footer>
+        </footer><!-- footer -->
     </div>
 </body>
 </html>
